feat: implement DELETE /v1/payments/{id:[0-9]+} endpoint and added documentation
